docs: split README into focused doc/ files
Trim README.md down to a quick overview (features, quick start, module
layout) and move the detailed architecture, verification status, and
troubleshooting sections into doc/architecture.md, doc/verification.md,
and doc/troubleshooting.md. Add a Gallery app screenshot.